<resources>
    <string name="app_name">SchoolShield</string>
</resources>
